se agrega el web scraping, falta mejorar el guardado de las carpetas

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,5 +20,9 @@
             android:id="@+id/nav_mimotoideal"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_MiMoto" />
+        <item
+            android:id="@+id/nav_estadisticaFragment"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_Estadistica" />
     </group>
 </menu>
