--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="verde">#0C8F1D</color>
     <color name="dorado">#bb8b06</color>
     <color name="azul">#062BB1</color>
+    <color name="azulPetroleo">#30395B</color>
     <color name="azulClaro">#0B3AE2</color>
     <color name="transparent">#00000000</color>
     <color name="colorprimarys">#062BB1</color>
