--- a/app/src/main/res/layout/fragment_agg_imagenes.xml
+++ b/app/src/main/res/layout/fragment_agg_imagenes.xml
@@ -119,18 +119,12 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/edtColorAdd"
-                android:layout_width="185dp"
-                android:layout_height="60dp"
-                android:hint="Color Primrario / Adicional"/>
             <Button
-                android:id="@+id/btnActivarPrimario"
+                android:id="@+id/btnActualizarPrecios"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginLeft="10dp"
-                android:text="ACTIVAR"/>
+                android:text="Actualizar Precios"/>
 
         </LinearLayout>
 
@@ -204,7 +198,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="5dp">
 
             <ImageView
                 android:id="@+id/imagen5"
@@ -212,24 +206,32 @@
                 android:layout_height="100dp"
                 android:layout_marginLeft="50dp"
                 android:background="@android:color/white"
-                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
                 android:src="@drawable/ic_menu_camera"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
                 <Button
-                    android:id="@+id/btnGuardar"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/btnURL"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
+                    android:text="URL"
+                    android:layout_marginLeft="65dp" />
+
+                <EditText
+                    android:id="@+id/edtURL"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:hint="URL"
+                    android:layout_marginLeft="35dp" />
+                <Button
+                    android:id="@+id/btnGuardar"
+                    android:layout_width="120dp"
+                    android:layout_height="40dp"
                     android:text="guardar"
                     android:layout_marginLeft="65dp" />
-                <Button
-                    android:id="@+id/btnHacerAnalisis"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="hacer analisis"
-                    android:layout_marginLeft="35dp" />
+
 
             </LinearLayout>
 
