--- a/app/src/main/res/layout/fragment_agg_imagenes.xml
+++ b/app/src/main/res/layout/fragment_agg_imagenes.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="15dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,7 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginBottom="00dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="15dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -44,79 +46,13 @@
                     android:spinnerMode="dialog" />
             </LinearLayout>
         </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="con datos - modificar imagenes"
-            android:layout_marginLeft="30dp"
-            android:textSize="16dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/spinner_border"
-                android:layout_weight="1">
-
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/spnTodo"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/spinerflecha"
-                    android:prompt="@string/seleccionarMoto"
-                    android:spinnerMode="dialog" />
-            </LinearLayout>
-        </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Color a modificar"
-            android:layout_marginLeft="30dp"
-            android:textSize="16dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/spinner_border"
-                android:layout_weight="1">
-
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/spnColoresTodo"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/spinerflecha"
-                    android:prompt="@string/seleccionarColorMoto"
-                    android:spinnerMode="dialog" />
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="50dp"
             android:gravity="center"
             android:orientation="horizontal">
             <Button
@@ -128,112 +64,41 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp">
-
-            <ImageView
-                android:id="@+id/imagen1"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="10dp"
-                android:background="@android:color/white"
-                android:src="@drawable/ic_menu_camera"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="12dp">
-
-                <ImageView
-                    android:id="@+id/imagen2"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_marginLeft="50dp"
-                    android:background="@android:color/white"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/ic_menu_camera"/>
-            </LinearLayout>
-        </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="15dp">
 
-            <ImageView
-                android:id="@+id/imagen3"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="10dp"
-                android:background="@android:color/white"
-                android:src="@drawable/ic_menu_camera"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="12dp">
-
-                <ImageView
-                    android:id="@+id/imagen4"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_marginLeft="50dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@android:color/white"
-                    android:src="@drawable/ic_menu_camera"/>
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp">
-
-            <ImageView
-                android:id="@+id/imagen5"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginLeft="50dp"
-                android:background="@android:color/white"
-                android:layout_marginBottom="20dp"
-                android:src="@drawable/ic_menu_camera"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:orientation="vertical">
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
                 <Button
                     android:id="@+id/btnURL"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
-                    android:text="URL"
-                    android:layout_marginLeft="65dp" />
+                    android:text="URL" />
 
                 <EditText
                     android:id="@+id/edtURL"
-                    android:layout_width="180dp"
+                    android:layout_width="230dp"
                     android:layout_height="wrap_content"
                     android:hint="URL"
-                    android:layout_marginLeft="35dp" />
-                <Button
-                    android:id="@+id/btnGuardar"
-                    android:layout_width="120dp"
-                    android:layout_height="40dp"
-                    android:text="guardar"
-                    android:layout_marginLeft="65dp" />
+                    android:layout_marginTop="15dp"/>
+
+
 
 
             </LinearLayout>
+
 
         </LinearLayout>
 
