--- a/app/src/main/res/layout/fragment_detalles_moto.xml
+++ b/app/src/main/res/layout/fragment_detalles_moto.xml
@@ -52,18 +52,16 @@
                 android:layout_marginTop="14dp"
                 android:layout_marginBottom="14dp">
             </TextView>
-
-
         </LinearLayout>
-
-
     </RelativeLayout>
 
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/transparent">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -71,14 +69,16 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <FrameLayout
+                android:id="@+id/frameContenedor"
                 android:layout_width="match_parent"
-                android:layout_height="330dp"
+                android:layout_height="305dp"
+                android:layout_marginTop="10dp"
                 app:layout_collapseMode="parallax">
 
                 <com.smarteist.autoimageslider.SliderView
                     android:id="@+id/imageSlider"
                     android:layout_width="match_parent"
-                    android:layout_height="340dp"
+                    android:layout_height="305dp"
                     app:sliderAnimationDuration="600"
                     app:sliderAutoCycleDirection="back_and_forth"
                     app:sliderAutoCycleEnabled="true"
@@ -99,10 +99,11 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_marginTop="12dp">
+        android:layout_marginTop="15dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -155,6 +156,36 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textSize="16dp"/>
+                <LinearLayout
+                    android:id="@+id/lnlDescuento"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="15dp"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="ANTES: "
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:gravity="center"
+                        android:textSize="13dp"/>
+
+                    <TextView
+                        android:id="@+id/txtprecioAnterior"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text=""
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:gravity="center"
+                        android:textSize="14dp"/>
+
+                </LinearLayout>
+
                 <TextView
                     android:id="@+id/txtPrecio"
                     android:layout_width="match_parent"
