--- a/app/src/main/res/layout/cardview_motos.xml
+++ b/app/src/main/res/layout/cardview_motos.xml
@@ -10,6 +10,7 @@
     android:layout_marginRight="10dp">
 
     <LinearLayout
+        android:id="@+id/lnlFondo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
