--- a/app/src/main/res/layout/fragment_agg_imagenes.xml
+++ b/app/src/main/res/layout/fragment_agg_imagenes.xml
@@ -88,22 +88,20 @@
                     android:text="URL" />
 
                 <EditText
+                    android:id="@+id/txtGalonAprox"
+                    android:layout_width="230dp"
+                    android:layout_height="wrap_content"
+                    android:hint="KM Aprox por galon"
+                    android:layout_marginTop="15dp"/>
+
+                <EditText
                     android:id="@+id/edtURL"
                     android:layout_width="230dp"
                     android:layout_height="wrap_content"
                     android:hint="URL"
                     android:layout_marginTop="15dp"/>
 
-
-
-
             </LinearLayout>
-
-
         </LinearLayout>
-
-
     </LinearLayout>
-
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
