--- a/app/src/main/res/layout/fragment_detalles_moto.xml
+++ b/app/src/main/res/layout/fragment_detalles_moto.xml
@@ -113,14 +113,17 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/crdColores"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="80dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_gravity="center">
 
                     <LinearLayout
                         android:id="@+id/lnlColores"
@@ -130,8 +133,27 @@
                         android:gravity="center"
                         android:layout_gravity="center">
                     </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_marginTop="10dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="COLOR:   "/>
+                        <TextView
+                            android:id="@+id/nombreColor"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=""/>
+                    </LinearLayout>
 
                 </LinearLayout>
+
+
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
