--- a/app/src/main/res/layout/fragment_estadistica.xml
+++ b/app/src/main/res/layout/fragment_estadistica.xml
@@ -4,11 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_margin="10dp">
+
+        <Button
+            android:id="@+id/btnMostrarNoVisibles"
+            android:layout_width="125dp"
+            android:layout_height="60dp"
+            android:text="Motos no visibles"/>
 
         <TextView
             android:layout_width="wrap_content"
