--- a/app/src/main/res/layout/fragment_detalles_moto.xml
+++ b/app/src/main/res/layout/fragment_detalles_moto.xml
@@ -134,6 +134,7 @@
                         android:layout_gravity="center">
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/lnlTextoColores"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
@@ -168,16 +169,44 @@
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:textSize="22dp"/>
+                    android:textSize="32dp"/>
                 <TextView
-                    android:id="@+id/txtModelo"
+                    android:id="@+id/txtFabricanteMoto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textColor="@color/black"
                     android:text=""
+                    android:textColor="@color/black"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:textSize="16dp"/>
+                    android:textSize="15dp"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txtModelo"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/black"
+                        android:text=""
+                        android:textStyle="bold"
+                        android:textSize="20dp"/>
+
+                    <TextView
+                        android:id="@+id/txtModelo2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/black"
+                        android:text=""
+                        android:textStyle="bold"
+                        android:layout_marginLeft="15dp"
+                        android:textSize="20dp"/>
+
+                </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/lnlDescuento"
                     android:layout_width="wrap_content"
@@ -219,6 +248,7 @@
                     android:textSize="45dp"/>
             </LinearLayout>
             <TextView
+                android:id="@+id/txtTituloDescripcionMoto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="DESCRIPCION"
