--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="grisclaro">#D2D2D2</color>
     <color name="grisFondo">#666666</color>
     <color name="amarillo">#FFEB3B</color>
+    <color name="amarilloVerde">#9FB810</color>
     <color name="morado">#65216D</color>
     <color name="red">#FF0000</color>
     <color name="rojoNegro">#A60707</color>
