--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="new_height">250dp</dimen>
+    <dimen name="new_height2">360dp</dimen>
     <dimen name="anterior_height">305dp</dimen>
 
 </resources>
