se cambian colores, se mejora la vista de la ficha tecnica, se agrega otro visualizador en la parte de recomendar

--- a/app/src/main/res/drawable/side_nav_bar2.xml
+++ b/app/src/main/res/drawable/side_nav_bar2.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#0375FF"
+        android:centerColor="#81B2ED"
         android:endColor="#B9E6E0"
-        android:startColor="#4DB6AC"
+        android:startColor="#5BFFF0"
         android:type="linear" />
 </shape>
