--- a/app/src/main/res/layout/cardview_mimotoideal.xml
+++ b/app/src/main/res/layout/cardview_mimotoideal.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/crdMoticos"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
