--- a/app/src/main/res/layout/fragment_agg_imagenes.xml
+++ b/app/src/main/res/layout/fragment_agg_imagenes.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sin Datos"
+            android:text="Listado de motos"
             android:layout_marginLeft="30dp"
             android:textSize="16dp"/>
         <LinearLayout
@@ -60,7 +60,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginLeft="10dp"
-                android:text="Actualizar Precios"/>
+                android:text="Actualizar Precios"
+                android:backgroundTint="@color/black"/>
 
         </LinearLayout>
 
@@ -83,16 +84,18 @@
                     android:visibility="gone"/>
                 <Button
                     android:id="@+id/btnURL"
-                    android:layout_width="120dp"
+                    android:layout_width="210dp"
                     android:layout_height="wrap_content"
-                    android:text="URL" />
+                    android:text="GUARDAR REGISTRO"
+                    android:backgroundTint="@color/black"
+                    android:layout_marginBottom="10dp"/>
 
                 <EditText
                     android:id="@+id/txtGalonAprox"
                     android:layout_width="230dp"
                     android:layout_height="wrap_content"
                     android:hint="KM Aprox por galon"
-                    android:layout_marginTop="15dp"/>
+                    android:layout_marginTop="25dp"/>
 
                 <EditText
                     android:id="@+id/edtURL"
