--- a/app/src/main/res/layout/fragment_detalles_moto.xml
+++ b/app/src/main/res/layout/fragment_detalles_moto.xml
@@ -47,7 +47,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:textSize="16dp"
-                android:text="COMPARAR"
+                android:text="ENFRENTAMIENTO"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="14dp"
                 android:layout_marginBottom="14dp">
