--- a/app/src/main/res/layout/fragment_nuevo_comparar.xml
+++ b/app/src/main/res/layout/fragment_nuevo_comparar.xml
@@ -37,8 +37,7 @@
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_margin="20dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_vs"/>
+                        android:scaleType="centerCrop" />
 
                     <TextView
                         android:id="@+id/txtNombreMoto1"
@@ -62,8 +61,7 @@
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_margin="20dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_vs"/>
+                        android:scaleType="centerCrop" />
 
                     <TextView
                         android:id="@+id/txtNombreMoto2"
@@ -241,6 +239,23 @@
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/grisclaro2">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="ESPECIFICACIONES"
+                    android:textColor="@color/black"
+                    android:textSize="22dp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -465,7 +480,7 @@
                         android:id="@+id/txtTorque2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="20.4 Nm"
+                        android:text=""
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="20dp"/>
                     <ProgressBar
@@ -562,6 +577,23 @@
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/grisclaro2">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="FRENOS"
+                    android:textColor="@color/black"
+                    android:textSize="22dp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -634,7 +666,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="SISTEMA DE ALIMENTACÓN"
+                            android:text="TIPO DE FRENOS"
                             android:textStyle="bold"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="10dp"/>
@@ -647,25 +679,117 @@
                             <ImageView
                                 android:layout_width="35dp"
                                 android:layout_height="35dp"
-                                android:src="@drawable/ico_fuel2"/>
+                                android:src="@drawable/icon_freno"/>
                         </LinearLayout>
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/txtFI1"
+                        android:id="@+id/txtFrenos1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text=""
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginLeft="15dp"
                         android:layout_marginTop="20dp"/>
+                    <TextView
+                        android:id="@+id/txtFrenos2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"/>
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/grisclaro2">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="RENDIMIENTO"
+                    android:textColor="@color/black"
+                    android:textSize="22dp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_gravity="center">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="VELOCIDAD MAXIMA"
+                            android:textStyle="bold"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="10dp"/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="right"
+                            android:layout_marginRight="10dp">
+                            <ImageView
+                                android:layout_width="35dp"
+                                android:layout_height="35dp"
+                                android:src="@drawable/icon_velocidad"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/txtVelMaxima1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="20dp"/>
+                    <ProgressBar
+                        android:id="@+id/progressBar9"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:progressDrawable="@drawable/barrafondo_verde"
+                        android:max="100"
+                        android:progress="0"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"/>
 
                     <TextView
-                        android:id="@+id/txtFI2"
+                        android:id="@+id/txtVelMaxima2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text=""
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="20dp"/>
+                    <ProgressBar
+                        android:id="@+id/progressBar10"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:progressDrawable="@drawable/barrafondo_rojo"
+                        android:max="100"
+                        android:progress="0"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
                         android:layout_marginBottom="20dp"/>
 
                 </LinearLayout>
@@ -723,6 +847,24 @@
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/grisclaro2">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="OTROS"
+                    android:textColor="@color/black"
+                    android:textSize="22dp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -741,7 +883,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="FRENOS"
+                            android:text="SISTEMA DE ALIMENTACÓN"
                             android:textStyle="bold"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="10dp"/>
@@ -754,28 +896,30 @@
                             <ImageView
                                 android:layout_width="35dp"
                                 android:layout_height="35dp"
-                                android:src="@drawable/icon_freno"/>
+                                android:src="@drawable/ico_fuel2"/>
                         </LinearLayout>
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/txtFrenos1"
+                        android:id="@+id/txtFI1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text=""
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginLeft="20dp"
                         android:layout_marginTop="20dp"/>
+
                     <TextView
-                        android:id="@+id/txtFrenos2"
+                        android:id="@+id/txtFI2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text=""
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginLeft="20dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginBottom="20dp"/>
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
