--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -49,7 +49,11 @@
     <fragment
         android:id="@+id/nav_mimotoideal"
         android:name="com.straccion.motos_admin.ui.mimoto.nav_mimotoideal"
-        tools:layout="@layout/fragment_nav_mimotoideal" />
+        tools:layout="@layout/fragment_nav_mimotoideal" >
+        <action
+            android:id="@+id/action_nav_mimotoideal_to_detallesMoto"
+            app:destination="@id/detallesMoto" />
+    </fragment>
     <fragment
         android:id="@+id/nav_estadisticaFragment"
         android:name="com.straccion.motos_admin.ui.Estadistica.EstadisticaFragment"
