--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -9,7 +9,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="30dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nuevo Registro"
+            android:textColor="@color/black"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:gravity="center"/>
 
 
         <LinearLayout
@@ -23,14 +32,14 @@
                 android:id="@+id/edtCarpeta1"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                android:hint="Nombre Carpeta 1"/>
+                android:hint="Nombre de Fabricante"/>
 
             <EditText
                 android:id="@+id/edtCarpeta2"
                 android:layout_width="190dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
-                android:hint="Nombre de carpeta 2" />
+                android:hint="Nombre de Marca" />
         </LinearLayout>
 
         <LinearLayout
@@ -44,7 +53,7 @@
                 android:id="@+id/edtCarpeta3"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                android:hint="Nombre de carpeta 3"/>
+                android:hint="Proposito de la Moto"/>
 
             <EditText
                 android:id="@+id/edtNombreMotos"
@@ -57,11 +66,11 @@
 
         <Button
             android:id="@+id/btnGuardar"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="30dp"
-            android:text="GUARDAR"/>
+            android:backgroundTint="@color/black"
+            android:layout_margin="60dp"
+            android:text="GUARDAR REGISTRO"/>
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="wrap_content"
@@ -73,15 +82,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/btnPasar2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                android:text="agg/mod imagenes"/>
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
+                android:backgroundTint="@color/black"
+                android:text="web scraping"/>
         </LinearLayout>
 
 
