--- a/app/src/main/res/layout/fragment_nav_mimotoideal.xml
+++ b/app/src/main/res/layout/fragment_nav_mimotoideal.xml
@@ -1,226 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/sclPantalla"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginTop="10dp">
-
-        <TextView
-            android:id="@+id/txtPregunta"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pregunta 1"
-            android:gravity="center"
-            android:textSize="20dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:gravity="center"
-        android:orientation="vertical">
-
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnRespuesta1"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
-                android:layout_marginRight="15dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/txtPregunta"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="respuesta 1"
-                android:textAlignment="center" />
-
-            <Button
-                android:id="@+id/btnRespuesta2"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
-                android:text="respuesta 2" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnRespuesta3"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
-                android:text="respuesta 3" />
-
-            <Button
-                android:id="@+id/btnRespuesta4"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
-                android:layout_marginLeft="15dp"
-                android:text="respuestas 4"/>
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/lnlPantalla"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:background="#E0E0E0"
-        android:orientation="vertical"
-        android:gravity="center">
-
-        <ProgressBar
-            android:id="@+id/progressBarMiMotoIdeal"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:visibility="gone"
-            android:layout_centerInParent="true"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/contenedorRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:visibility="gone"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+                android:text="Pregunta 1"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_marginTop="150sp"
+                android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/txtTitulo1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:textSize="20dp"
-                        android:text="MOTOS RECOMENDADAS"
-                        android:textColor="@color/black"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        android:textStyle="italic"/>
+                <Button
+                    android:id="@+id/btnRespuesta1"
+                    android:layout_width="180dp"
+                    android:layout_height="150dp"
+                    android:layout_marginRight="15dp"
+                    android:gravity="center"
+                    android:text="respuesta 1"
+                    android:backgroundTint="@color/black"
+                    android:textAlignment="center" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="right">
-                        <Button
-                            android:id="@+id/btnVerMas1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="ver mas"
-                            android:gravity="center"
-                            android:backgroundTint="@color/transparent"
-                            android:textColor="@color/black"
-                            android:layout_gravity="right"
-                            android:layout_marginRight="10dp"/>
-                    </LinearLayout>
-                </LinearLayout>
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/reciclerViewMiMoto1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="visible"
-                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/txtTitulo2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:textSize="20dp"
-                        android:textColor="@color/black"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        android:textStyle="italic"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="right">
-                        <Button
-                            android:id="@+id/btnVerMas2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="ver mas"
-                            android:backgroundTint="@color/transparent"
-                            android:textColor="@color/black"
-                            android:layout_gravity="right"
-                            android:gravity="center"
-                            android:layout_marginRight="10dp"/>
-                    </LinearLayout>
-                </LinearLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/reciclerViewMiMoto2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="visible"
-                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/txtTitulo3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:textSize="17dp"
-                        android:textColor="@color/black"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        android:textStyle="italic"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="right">
-                        <Button
-                            android:id="@+id/btnVerMas3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="ver mas"
-                            android:backgroundTint="@color/transparent"
-                            android:textColor="@color/black"
-                            android:layout_gravity="right"
-                            android:gravity="center"
-                            android:layout_marginRight="10dp"/>
-                    </LinearLayout>
-                </LinearLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/reciclerViewMiMoto3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="visible"
-                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
+                <Button
+                    android:id="@+id/btnRespuesta2"
+                    android:layout_width="180dp"
+                    android:layout_height="150dp"
+                    android:backgroundTint="@color/black"
+                    android:text="respuesta 2" />
             </LinearLayout>
-        </RelativeLayout>
-    </LinearLayout>
-</FrameLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnRespuesta3"
+                    android:layout_width="180dp"
+                    android:layout_height="150dp"
+                    android:layout_marginRight="15dp"
+                    android:gravity="center"
+                    android:backgroundTint="@color/black"
+                    android:text="respuesta 1"
+                    android:textAlignment="center" />
+
+                <Button
+                    android:id="@+id/btnRespuesta4"
+                    android:layout_width="180dp"
+                    android:layout_height="150dp"
+                    android:backgroundTint="@color/black"
+                    android:text="respuesta 2" />
+            </LinearLayout>
+        </LinearLayout>
+        <ProgressBar
+            android:id="@+id/progressBarMiMotoIdeal"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"/>
+
+
+        <LinearLayout
+            android:id="@+id/contenedorRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/txtTitulo1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="MOTOS RECOMENDADAS"
+                            android:textColor="@color/black"
+                            android:textSize="20dp"
+                            android:textStyle="italic" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="right">
+
+                            <Button
+                                android:id="@+id/btnVerMas1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:layout_marginRight="10dp"
+                                android:backgroundTint="@color/transparent"
+                                android:gravity="center"
+                                android:text="ver mas"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/reciclerViewMiMoto1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="visible"
+                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/txtTitulo2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:textColor="@color/black"
+                            android:textSize="20dp"
+                            android:textStyle="italic" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="right">
+
+                            <Button
+                                android:id="@+id/btnVerMas2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:layout_marginRight="10dp"
+                                android:backgroundTint="@color/transparent"
+                                android:gravity="center"
+                                android:text="ver mas"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/reciclerViewMiMoto2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="visible"
+                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/txtTitulo3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:textColor="@color/black"
+                            android:textSize="17dp"
+                            android:textStyle="italic" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="right">
+
+                            <Button
+                                android:id="@+id/btnVerMas3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:layout_marginRight="10dp"
+                                android:backgroundTint="@color/transparent"
+                                android:gravity="center"
+                                android:text="ver mas"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/reciclerViewMiMoto3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="visible"
+                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+                </LinearLayout>
+            </RelativeLayout>
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</ScrollView>
