--- a/app/src/main/res/layout/fragment_nuevo_comparar.xml
+++ b/app/src/main/res/layout/fragment_nuevo_comparar.xml
@@ -19,19 +19,20 @@
             android:background="@color/white"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <FrameLayout
-                android:id="@+id/frameContenedor"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:layout_collapseMode="parallax">
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="10dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginLeft="30dp"
-                    android:layout_gravity="left">
+                    android:layout_weight="1"
+                    android:gravity="center">
+
                     <ImageView
                         android:id="@+id/imgMoto1"
                         android:layout_width="120dp"
@@ -43,18 +44,17 @@
                         android:id="@+id/txtNombreMoto1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="apache 2asdasdas00"
+                        android:text="apache 200"
                         android:layout_marginBottom="10dp"
-                        android:layout_gravity="center"/>
-
+                        android:gravity="center"/>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="30dp">
+                    android:layout_weight="1"
+                    android:gravity="center">
 
                     <ImageView
                         android:id="@+id/imgMoto2"
@@ -67,11 +67,12 @@
                         android:id="@+id/txtNombreMoto2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="tvsasdhajksdjkash"
+                        android:text="tvs"
                         android:layout_marginBottom="10dp"
-                        android:layout_gravity="center"/>
+                        android:gravity="center"/>
                 </LinearLayout>
-            </FrameLayout>
+
+            </LinearLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
