--- a/app/src/main/res/layout/cardview_motos.xml
+++ b/app/src/main/res/layout/cardview_motos.xml
@@ -7,6 +7,7 @@
     android:layout_height="240dp"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:layout_marginRight="10dp">
 
     <LinearLayout
@@ -26,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="YAMAHA"
+            android:textColor="@color/black"
             android:textSize="12dp"
             android:layout_marginLeft="8dp"
             android:layout_marginBottom="5dp"/>
@@ -35,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Titulo de la moto"
+            android:textColor="@color/black"
             android:textSize="16dp"
             android:maxLines="1"
             android:textAlignment="center"/>
