--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -10,13 +10,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="15dp"
+        android:orientation="vertical">
 
         <io.github.florent37.shapeofview.shapes.DiagonalView
 
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="270dp"
             android:elevation="4dp"
             app:shape_diagonal_angle="10"
             app:shape_diagonal_position="bottom">
@@ -24,14 +24,16 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/red" />
-
+                android:background="@color/black" />
 
             <ImageView
                 android:layout_width="220dp"
                 android:layout_height="180dp"
                 android:layout_gravity="center|top"
-                android:src="@drawable/icon_app" />
+                android:src="@drawable/icon_app"
+                android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
+                android:outlineProvider="bounds"/>
 
         </io.github.florent37.shapeofview.shapes.DiagonalView>
 
@@ -40,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="50dp"
             android:layout_marginRight="30dp"
             android:gravity="center"
             android:orientation="horizontal">
@@ -69,7 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
             android:layout_marginRight="30dp"
             android:gravity="center"
             android:orientation="horizontal">
@@ -100,9 +102,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="60dp"
             android:layout_marginRight="20dp"
-            android:backgroundTint="@color/red"
+            android:backgroundTint="@color/black"
             android:text="INICIAR SESION" />
 
     </LinearLayout>
