--- a/app/src/main/res/layout/fragment_nav_mimotoideal.xml
+++ b/app/src/main/res/layout/fragment_nav_mimotoideal.xml
@@ -105,8 +105,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/txtTitulo1"
@@ -119,22 +118,6 @@
                             android:textSize="20dp"
                             android:textStyle="italic" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="right">
-
-                            <Button
-                                android:id="@+id/btnVerMas1"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="right"
-                                android:layout_marginRight="10dp"
-                                android:backgroundTint="@color/transparent"
-                                android:gravity="center"
-                                android:text="ver mas"
-                                android:textColor="@color/black" />
-                        </LinearLayout>
                     </LinearLayout>
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -146,8 +129,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/txtTitulo2"
@@ -159,22 +141,6 @@
                             android:textSize="20dp"
                             android:textStyle="italic" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="right">
-
-                            <Button
-                                android:id="@+id/btnVerMas2"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="right"
-                                android:layout_marginRight="10dp"
-                                android:backgroundTint="@color/transparent"
-                                android:gravity="center"
-                                android:text="ver mas"
-                                android:textColor="@color/black" />
-                        </LinearLayout>
                     </LinearLayout>
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -186,8 +152,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/txtTitulo3"
@@ -199,22 +164,6 @@
                             android:textSize="17dp"
                             android:textStyle="italic" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="right">
-
-                            <Button
-                                android:id="@+id/btnVerMas3"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="right"
-                                android:layout_marginRight="10dp"
-                                android:backgroundTint="@color/transparent"
-                                android:gravity="center"
-                                android:text="ver mas"
-                                android:textColor="@color/black" />
-                        </LinearLayout>
                     </LinearLayout>
 
                     <androidx.recyclerview.widget.RecyclerView
