--- a/app/src/main/res/layout/card_elegir_moto.xml
+++ b/app/src/main/res/layout/card_elegir_moto.xml
@@ -20,7 +20,7 @@
                 android:layout_height="120dp"
                 android:layout_margin="20dp"
                 android:padding="15dp"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 android:src="@drawable/ic_sumar_sinfondo"/>
 
             <TextView
@@ -52,7 +52,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_margin="20dp"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:padding="15dp"
             android:src="@drawable/ic_sumar_sinfondo"/>
 
