--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,8 @@
         <LinearLayout
             android:id="@+id/lnlProgressBar"
             android:layout_width="match_parent"
+            android:background="@color/transparent"
+            android:backgroundTint="@color/transparent"
             android:layout_height="50dp"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             android:visibility="gone"
@@ -69,7 +71,6 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="19dp"
                 android:visibility="gone" />
-
 
         </LinearLayout>
 
