--- a/app/src/main/res/layout/fragment_nuevo_comparar.xml
+++ b/app/src/main/res/layout/fragment_nuevo_comparar.xml
@@ -38,7 +38,7 @@
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_margin="20dp"
-                        android:scaleType="centerCrop" />
+                        android:scaleType="fitCenter" />
 
                     <TextView
                         android:id="@+id/txtNombreMoto1"
@@ -61,7 +61,7 @@
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_margin="20dp"
-                        android:scaleType="centerCrop" />
+                        android:scaleType="fitCenter" />
 
                     <TextView
                         android:id="@+id/txtNombreMoto2"
